parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ANGLE
    BOOLTYPE
    BREAK
    DIFFER
    ELSE
    FLOAT
    LCOR
    LEFT
    LINE
    MINUS
    MULTIPLY
    NILL
    NOT
    OR
    PLUS
    POP
    PUSH
    RCOR
    RIGHT
    RULE
    WHILE

Grammar

Rule 0     S' -> Program
Rule 1     Program -> InstructionList
Rule 2     InstructionList -> Instruction END InstructionList
Rule 3     InstructionList -> Instruction END
Rule 4     Assignable -> INT
Rule 5     Instruction -> LSYS ID LBRACE Lsystem_body RBRACE
Rule 6     Instruction -> ID EQUAL Assignable
Rule 7     Instruction -> TYPE ID EQUAL Assignable
Rule 8     Lsystem_body -> AXIOM TWOPOINTS STRING COMMA Ls_rules
Rule 9     Ls_rules -> STRING ARROW STRING COMMA Ls_rules
Rule 10    Ls_rules -> STRING ARROW STRING
Rule 11    Instruction -> ADD_RULE LPAREN ID COMMA STRING COMMA STRING RPAREN
Rule 12    Instruction -> BRUSH ID LBRACE Brush_body RBRACE
Rule 13    Brush_body -> SIZE TWOPOINTS INT COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS INT
Rule 14    Brush_body -> SIZE TWOPOINTS INT COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS ID
Rule 15    Brush_body -> SIZE TWOPOINTS ID COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS INT
Rule 16    Brush_body -> SIZE TWOPOINTS ID COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS ID
Rule 17    Instruction -> CANVAS ID LBRACE Canvas_body RBRACE
Rule 18    Canvas_body -> HIGH TWOPOINTS INT COMMA WIDTH TWOPOINTS INT COMMA COLOR TWOPOINTS COL
Rule 19    Canvas_body -> HIGH TWOPOINTS ID COMMA WIDTH TWOPOINTS ID COMMA COLOR TWOPOINTS COL
Rule 20    Canvas_body -> HIGH TWOPOINTS INT COMMA WIDTH TWOPOINTS ID COMMA COLOR TWOPOINTS COL
Rule 21    Canvas_body -> HIGH TWOPOINTS ID COMMA WIDTH TWOPOINTS INT COMMA COLOR TWOPOINTS COL
Rule 22    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
Rule 23    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
Rule 24    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
Rule 25    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
Rule 26    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
Rule 27    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
Rule 28    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
Rule 29    Instruction -> DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN
Rule 30    Instruction -> REPEAT INT LBRACE InstructionList RBRACE
Rule 31    Instruction -> IF LPAREN Condition RPAREN LBRACE InstructionList RBRACE
Rule 32    Condition -> Assignable GEQUAL Assignable
Rule 33    Condition -> Assignable LEQUAL Assignable
Rule 34    Condition -> Assignable EQUALEQUAL Assignable
Rule 35    Condition -> Assignable GREATER Assignable
Rule 36    Condition -> Assignable LESS Assignable
Rule 37    Condition -> BOOL

Terminals, with rules where they appear

ADD_RULE             : 11
AND                  : 
ANGLE                : 
ARROW                : 9 10
AXIOM                : 8
BOOL                 : 37
BOOLTYPE             : 
BREAK                : 
BRUSH                : 12
CANVAS               : 17
COL                  : 13 14 15 16 18 19 20 21
COLOR                : 13 14 15 16 18 19 20 21
COMMA                : 8 9 11 11 13 13 14 14 15 15 16 16 18 18 19 19 20 20 21 21 22 22 22 22 22 23 23 23 23 23 24 24 24 24 24 25 25 25 25 25 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29 29 29
DIFFER               : 
DRAW                 : 22 23 24 25 26 27 28 29
ELSE                 : 
END                  : 2 3
EQUAL                : 6 7
EQUALEQUAL           : 34
FLOAT                : 
GEQUAL               : 32
GREATER              : 35
HIGH                 : 18 19 20 21
ID                   : 5 6 7 11 12 14 15 16 16 17 19 19 20 21 22 22 22 22 22 22 23 23 23 23 24 24 24 24 25 25 25 25 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29
IF                   : 31
INT                  : 4 13 13 14 15 18 18 20 21 23 23 24 24 25 25 26 27 28 29 29 29 30
LBRACE               : 5 12 17 30 31
LCOR                 : 
LEFT                 : 
LEQUAL               : 33
LESS                 : 36
LINE                 : 
LPAREN               : 11 22 23 24 25 26 27 28 29 31
LSYS                 : 5
MINUS                : 
MULTIPLY             : 
NILL                 : 
NOT                  : 
OR                   : 
PLUS                 : 
POP                  : 
PUSH                 : 
RBRACE               : 5 12 17 30 31
RCOR                 : 
REPEAT               : 30
RIGHT                : 
RPAREN               : 11 22 23 24 25 26 27 28 29 31
RULE                 : 
SIZE                 : 13 14 15 16
SPEED                : 13 14 15 16
STRING               : 8 9 9 10 10 11 11
TWOPOINTS            : 8 13 13 13 14 14 14 15 15 15 16 16 16 18 18 18 19 19 19 20 20 20 21 21 21
TYPE                 : 7
WHILE                : 
WIDTH                : 18 19 20 21
error                : 

Nonterminals, with rules where they appear

Assignable           : 6 7 32 32 33 33 34 34 35 35 36 36
Brush_body           : 12
Canvas_body          : 17
Condition            : 31
Instruction          : 2 3
InstructionList      : 1 2 30 31
Ls_rules             : 8 9
Lsystem_body         : 5
Program              : 0

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . InstructionList
    (2) InstructionList -> . Instruction END InstructionList
    (3) InstructionList -> . Instruction END
    (5) Instruction -> . LSYS ID LBRACE Lsystem_body RBRACE
    (6) Instruction -> . ID EQUAL Assignable
    (7) Instruction -> . TYPE ID EQUAL Assignable
    (11) Instruction -> . ADD_RULE LPAREN ID COMMA STRING COMMA STRING RPAREN
    (12) Instruction -> . BRUSH ID LBRACE Brush_body RBRACE
    (17) Instruction -> . CANVAS ID LBRACE Canvas_body RBRACE
    (22) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
    (23) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
    (24) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
    (25) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
    (26) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
    (27) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
    (28) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
    (29) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN
    (30) Instruction -> . REPEAT INT LBRACE InstructionList RBRACE
    (31) Instruction -> . IF LPAREN Condition RPAREN LBRACE InstructionList RBRACE

    LSYS            shift and go to state 4
    ID              shift and go to state 5
    TYPE            shift and go to state 6
    ADD_RULE        shift and go to state 7
    BRUSH           shift and go to state 8
    CANVAS          shift and go to state 9
    DRAW            shift and go to state 10
    REPEAT          shift and go to state 11
    IF              shift and go to state 12

    Program                        shift and go to state 1
    InstructionList                shift and go to state 2
    Instruction                    shift and go to state 3

state 1

    (0) S' -> Program .



state 2

    (1) Program -> InstructionList .

    $end            reduce using rule 1 (Program -> InstructionList .)


state 3

    (2) InstructionList -> Instruction . END InstructionList
    (3) InstructionList -> Instruction . END

    END             shift and go to state 13


state 4

    (5) Instruction -> LSYS . ID LBRACE Lsystem_body RBRACE

    ID              shift and go to state 14


state 5

    (6) Instruction -> ID . EQUAL Assignable

    EQUAL           shift and go to state 15


state 6

    (7) Instruction -> TYPE . ID EQUAL Assignable

    ID              shift and go to state 16


state 7

    (11) Instruction -> ADD_RULE . LPAREN ID COMMA STRING COMMA STRING RPAREN

    LPAREN          shift and go to state 17


state 8

    (12) Instruction -> BRUSH . ID LBRACE Brush_body RBRACE

    ID              shift and go to state 18


state 9

    (17) Instruction -> CANVAS . ID LBRACE Canvas_body RBRACE

    ID              shift and go to state 19


state 10

    (22) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
    (23) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
    (24) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
    (25) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
    (26) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
    (27) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
    (28) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
    (29) Instruction -> DRAW . LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN

    LPAREN          shift and go to state 20


state 11

    (30) Instruction -> REPEAT . INT LBRACE InstructionList RBRACE

    INT             shift and go to state 21


state 12

    (31) Instruction -> IF . LPAREN Condition RPAREN LBRACE InstructionList RBRACE

    LPAREN          shift and go to state 22


state 13

    (2) InstructionList -> Instruction END . InstructionList
    (3) InstructionList -> Instruction END .
    (2) InstructionList -> . Instruction END InstructionList
    (3) InstructionList -> . Instruction END
    (5) Instruction -> . LSYS ID LBRACE Lsystem_body RBRACE
    (6) Instruction -> . ID EQUAL Assignable
    (7) Instruction -> . TYPE ID EQUAL Assignable
    (11) Instruction -> . ADD_RULE LPAREN ID COMMA STRING COMMA STRING RPAREN
    (12) Instruction -> . BRUSH ID LBRACE Brush_body RBRACE
    (17) Instruction -> . CANVAS ID LBRACE Canvas_body RBRACE
    (22) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
    (23) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
    (24) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
    (25) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
    (26) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
    (27) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
    (28) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
    (29) Instruction -> . DRAW LPAREN ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN
    (30) Instruction -> . REPEAT INT LBRACE InstructionList RBRACE
    (31) Instruction -> . IF LPAREN Condition RPAREN LBRACE InstructionList RBRACE

    $end            reduce using rule 3 (InstructionList -> Instruction END .)
    RBRACE          reduce using rule 3 (InstructionList -> Instruction END .)
    LSYS            shift and go to state 4
    ID              shift and go to state 5
    TYPE            shift and go to state 6
    ADD_RULE        shift and go to state 7
    BRUSH           shift and go to state 8
    CANVAS          shift and go to state 9
    DRAW            shift and go to state 10
    REPEAT          shift and go to state 11
    IF              shift and go to state 12

    Instruction                    shift and go to state 3
    InstructionList                shift and go to state 23

state 14

    (5) Instruction -> LSYS ID . LBRACE Lsystem_body RBRACE

    LBRACE          shift and go to state 24


state 15

    (6) Instruction -> ID EQUAL . Assignable
    (4) Assignable -> . INT

    INT             shift and go to state 26

    Assignable                     shift and go to state 25

state 16

    (7) Instruction -> TYPE ID . EQUAL Assignable

    EQUAL           shift and go to state 27


state 17

    (11) Instruction -> ADD_RULE LPAREN . ID COMMA STRING COMMA STRING RPAREN

    ID              shift and go to state 28


state 18

    (12) Instruction -> BRUSH ID . LBRACE Brush_body RBRACE

    LBRACE          shift and go to state 29


state 19

    (17) Instruction -> CANVAS ID . LBRACE Canvas_body RBRACE

    LBRACE          shift and go to state 30


state 20

    (22) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
    (23) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
    (24) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
    (25) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
    (26) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
    (27) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
    (28) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
    (29) Instruction -> DRAW LPAREN . ID COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN

    ID              shift and go to state 31


state 21

    (30) Instruction -> REPEAT INT . LBRACE InstructionList RBRACE

    LBRACE          shift and go to state 32


state 22

    (31) Instruction -> IF LPAREN . Condition RPAREN LBRACE InstructionList RBRACE
    (32) Condition -> . Assignable GEQUAL Assignable
    (33) Condition -> . Assignable LEQUAL Assignable
    (34) Condition -> . Assignable EQUALEQUAL Assignable
    (35) Condition -> . Assignable GREATER Assignable
    (36) Condition -> . Assignable LESS Assignable
    (37) Condition -> . BOOL
    (4) Assignable -> . INT

    BOOL            shift and go to state 35
    INT             shift and go to state 26

    Condition                      shift and go to state 33
    Assignable                     shift and go to state 34

state 23

    (2) InstructionList -> Instruction END InstructionList .

    $end            reduce using rule 2 (InstructionList -> Instruction END InstructionList .)
    RBRACE          reduce using rule 2 (InstructionList -> Instruction END InstructionList .)


state 24

    (5) Instruction -> LSYS ID LBRACE . Lsystem_body RBRACE
    (8) Lsystem_body -> . AXIOM TWOPOINTS STRING COMMA Ls_rules

    AXIOM           shift and go to state 37

    Lsystem_body                   shift and go to state 36

state 25

    (6) Instruction -> ID EQUAL Assignable .

    END             reduce using rule 6 (Instruction -> ID EQUAL Assignable .)


state 26

    (4) Assignable -> INT .

    END             reduce using rule 4 (Assignable -> INT .)
    GEQUAL          reduce using rule 4 (Assignable -> INT .)
    LEQUAL          reduce using rule 4 (Assignable -> INT .)
    EQUALEQUAL      reduce using rule 4 (Assignable -> INT .)
    GREATER         reduce using rule 4 (Assignable -> INT .)
    LESS            reduce using rule 4 (Assignable -> INT .)
    RPAREN          reduce using rule 4 (Assignable -> INT .)


state 27

    (7) Instruction -> TYPE ID EQUAL . Assignable
    (4) Assignable -> . INT

    INT             shift and go to state 26

    Assignable                     shift and go to state 38

state 28

    (11) Instruction -> ADD_RULE LPAREN ID . COMMA STRING COMMA STRING RPAREN

    COMMA           shift and go to state 39


state 29

    (12) Instruction -> BRUSH ID LBRACE . Brush_body RBRACE
    (13) Brush_body -> . SIZE TWOPOINTS INT COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS INT
    (14) Brush_body -> . SIZE TWOPOINTS INT COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS ID
    (15) Brush_body -> . SIZE TWOPOINTS ID COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS INT
    (16) Brush_body -> . SIZE TWOPOINTS ID COMMA COLOR TWOPOINTS COL COMMA SPEED TWOPOINTS ID

    SIZE            shift and go to state 41

    Brush_body                     shift and go to state 40

state 30

    (17) Instruction -> CANVAS ID LBRACE . Canvas_body RBRACE
    (18) Canvas_body -> . HIGH TWOPOINTS INT COMMA WIDTH TWOPOINTS INT COMMA COLOR TWOPOINTS COL
    (19) Canvas_body -> . HIGH TWOPOINTS ID COMMA WIDTH TWOPOINTS ID COMMA COLOR TWOPOINTS COL
    (20) Canvas_body -> . HIGH TWOPOINTS INT COMMA WIDTH TWOPOINTS ID COMMA COLOR TWOPOINTS COL
    (21) Canvas_body -> . HIGH TWOPOINTS ID COMMA WIDTH TWOPOINTS INT COMMA COLOR TWOPOINTS COL

    HIGH            shift and go to state 43

    Canvas_body                    shift and go to state 42

state 31

    (22) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA ID COMMA ID COMMA ID RPAREN
    (23) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA ID COMMA INT COMMA INT RPAREN
    (24) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA INT COMMA ID COMMA INT RPAREN
    (25) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA INT COMMA INT COMMA ID RPAREN
    (26) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA ID COMMA ID COMMA INT RPAREN
    (27) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA ID COMMA INT COMMA ID RPAREN
    (28) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA INT COMMA ID COMMA ID RPAREN
    (29) Instruction -> DRAW LPAREN ID . COMMA ID COMMA ID COMMA INT COMMA INT COMMA INT RPAREN

    COMMA           shift and go to state 44


state 32
